--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,6 @@ configparser==3.5.0
 Django==1.11.23
 djangorestframework==3.7.7
 enum34==1.1.6
-futures==3.2.0
 idna==2.6
 isort==4.3.4
 lazy-object-proxy==1.3.1
@@ -22,3 +21,4 @@ six==1.11.0
 urllib3==1.22
 wincertstore==0.2
 wrapt==1.10.11
+djangorestframework-jwt
